--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "initial-db": "node ./bin/install_db.js"
   },
   "dependencies": {
+    "basic-auth": "^1.0.3",
+    "basic-auth-mongoose": "^0.1.1",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
