--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "initial-db": "node ./bin/install_db.js"
   },
   "dependencies": {
+    "apidoc": "^0.15.1",
     "basic-auth": "^1.0.3",
     "basic-auth-mongoose": "^0.1.1",
     "body-parser": "~1.13.2",
