Editada página index de entrada a la app, añadido .jshintrc para resaltar sintaxis javascript, creado script de incialización con promesas, ERROR: hay que corregir los scripts porque han dejado de funcionar, puede ser un problema del package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "initial-db": "node ./bin/install_db.js"
+    "initial-db": "node ./bin/install_db.js",
+    "initial-db-promises": "node ./bin/install_db2.js"
   },
   "dependencies": {
     "apidoc": "^0.15.1",
