Cambios para solucionar el problema con el script de inicialización. Sin exito de momento

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start-multicore": "node ./bin/www-multi",
     "initial-db": "node ./bin/install_db.js",
     "initial-db-promises": "node ./bin/install_db2.js"
   },
